--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Among Us Download</title>
 </head>
 <body>
-    <a href="Among Us/" download>
+    <a href="Among Us.zip" download>
         Download
     </a>
     <p>Download Software</p>
